# gomoku

./: .gitignore  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml
.github/workflows/: ci.yaml
client/: Dockerfile  package.json
client/deployment/: nginx.default.conf
client/public/: index.html
client/src/: App.js  App.test.js  Game.css  Game.js  Game.test.js
gomoku-rs/: Cargo.toml  Dockerfile
gomoku-rs/src/: game.rs  lib.rs  main.rs  server.rs  strategy.rs
gomoku-rs/tests/: test_game.rs  test_strategy.rs
server/: .dockerignore  .pylintrc  Dockerfile  Makefile  pytest.ini  requirements-test.txt  requirements.txt  setup.py
server/gomoku/: app.py  game.py  strategy.py  utils.pyx
server/src/: app.py  exceptions.py  game.py  game_manager.py  messages.py  mtd.pyx  setup.py  strategy.py  tasks.py  timer.py  utils.py  utils.pyx
server/tests/: conftest.py  test_app.py  test_game.py  test_game_manager.py  test_strategy.py  test_utils.py
