[package]
name = "gomoku-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"]}

[dev-dependencies]
rstest = "0.24.0"
